structure pre-workshop files

--- a/pre-workshop/01-assignment.html
+++ b/pre-workshop/01-assignment.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="Bonnie Robert, Data Science Partnerships">
 
-<title>Pre-Workshop Installation and Set-Up</title>
+<title>Pre-Workshop Assignment</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -24,16 +24,16 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="00-software-install_files/libs/clipboard/clipboard.min.js"></script>
-<script src="00-software-install_files/libs/quarto-html/quarto.js"></script>
-<script src="00-software-install_files/libs/quarto-html/popper.min.js"></script>
-<script src="00-software-install_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="00-software-install_files/libs/quarto-html/anchor.min.js"></script>
-<link href="00-software-install_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="00-software-install_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="00-software-install_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="00-software-install_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="00-software-install_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="01-assignment_files/libs/clipboard/clipboard.min.js"></script>
+<script src="01-assignment_files/libs/quarto-html/quarto.js"></script>
+<script src="01-assignment_files/libs/quarto-html/popper.min.js"></script>
+<script src="01-assignment_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="01-assignment_files/libs/quarto-html/anchor.min.js"></script>
+<link href="01-assignment_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="01-assignment_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="01-assignment_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="01-assignment_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="01-assignment_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -46,7 +46,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Pre-Workshop Installation and Set-Up</h1>
+<h1 class="title">Pre-Workshop Assignment</h1>
 </div>
 
 
