add links to course outline

--- a/course-outline.html
+++ b/course-outline.html
@@ -352,19 +352,24 @@ display: none;
 </div>
 
 
-<div id="pre-workshop-installation-and-set-up" class="section level2">
-<h2>Pre-Workshop Installation and Set Up</h2>
+<div id="course-outline-introduction-to-version-control" class="section level2">
+<h2>Course Outline: Introduction to Version Control</h2>
+<div id="pre-workshop-installation-and-set-up" class="section level3">
+<h3>Pre-Workshop Installation and Set Up</h3>
 <p>Learning Objective: Set up a github account and install git
 (pre-workshop).<br />
+Instructions: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/pre-workshop/00-software-install.html">Installation
+and Set-Up</a><br />
+Assignment: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/pre-workshop/01-assignment.html">Pre-Workshop
+Assignment</a><br />
 </p>
-<p>Instructions: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/pre-workshop/00-software-install.html" class="uri">https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/pre-workshop/00-software-install.html</a><br />
-Assignment: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html" class="uri">https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html</a></p>
 <p>Topics/Learning Outcomes:</p>
 <ul>
 <li>Download Git for Windows and bundled software (includes Git
 Bash)</li>
 <li>Create a GitHub account with m2FA, PAT for https connection</li>
-<li>Configure git, RStudio (optional)</li>
+<li>Configure git</li>
+<li>Configure RStudio (optional)</li>
 <li>Pre-workshop assignment to show local configuration and connection
 to GitHub</li>
 </ul>
@@ -375,11 +380,12 @@ to GitHub</li>
 <li>Take from SW Carpentry Episode 2. Setting Up Git</li>
 </ul>
 </div>
-<div id="section-1.-what-is-version-control" class="section level2">
-<h2>Section 1. What is version control?</h2>
+<div id="section-1.-what-is-version-control" class="section level3">
+<h3>Section 1. What is Version Control?</h3>
 <p>Learning Objective: Understand the value-add of using version control
 to manage software projects<br />
-Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html" class="uri">https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html</a></p>
+Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html">Section
+1 Slides</a></p>
 <p>Topics:</p>
 <ul>
 <li>Flow diagram</li>
@@ -389,11 +395,12 @@ Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intr
 <li>Take from SW Carpentry Episode 1. Automated Version Control</li>
 </ul>
 </div>
-<div id="section-2.-working-local-with-git" class="section level2">
-<h2>Section 2. Working local with git</h2>
+<div id="section-2.-working-local-with-git" class="section level3">
+<h3>Section 2. Working local with git</h3>
 <p>Learning Objective: Use command-line git to track local file changes.
 (<em>more about git</em>)<br />
-Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html" class="uri">https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html</a></p>
+Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html">Section
+2 Slides</a></p>
 <p>Topics:</p>
 <ul>
 <li>Default branch naming (inclusive language)</li>
@@ -410,11 +417,12 @@ Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intr
 <li>Take from SW Carpentry Episode 4. Tracking Changes</li>
 </ul>
 </div>
-<div id="section-3.-remote-code-hosting-and-github" class="section level2">
-<h2>Section 3. Remote Code Hosting and GitHub</h2>
+<div id="section-3.-remote-code-hosting-and-github" class="section level3">
+<h3>Section 3. Remote Code Hosting and GitHub</h3>
 <p>Learning Objective: What are remote hosting platforms and why do we
 use them?<br />
-Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html" class="uri">https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html</a></p>
+Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html">Section
+3 Slides</a></p>
 <p>Topics:</p>
 <ul>
 <li>More on secure authentication/login: username/password/2FA to sign
@@ -434,11 +442,12 @@ GitHub)</li>
 <li>Take from SW Carpentry Episode 6. Ignoring Things</li>
 </ul>
 </div>
-<div id="section-4" class="section level2">
-<h2>Section 4</h2>
+<div id="section-4" class="section level3">
+<h3>Section 4</h3>
 <p>Learning Objective: (<em>Something about BC Gov specific materials
 Org, Licensing, bcgovr</em>)<br />
-</p>
+Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html">Section
+4 Slides</a></p>
 <p>Topics:</p>
 <ul>
 <li>discuss bcgov organization, licensing, code-sharing, PIA/STRA
@@ -450,6 +459,7 @@ etc.</li>
 <ul>
 <li>Take from SW Carpentry Episode 10 - 13</li>
 </ul>
+</div>
 </div>
 
 
