--- a/course-outline.html
+++ b/course-outline.html
@@ -373,33 +373,33 @@ Bash)</li>
 <li>Pre-workshop assignment to show local configuration and connection
 to GitHub</li>
 </ul>
-<p>Source Materials:</p>
+<p>Course Reference Material:</p>
 <ul>
-<li>Take from Installation instructions here:
+<li>Installation instructions here:
 <code>glue::glue(safepaths::get_network_path(), &quot;/8. Data Science Training/github_how_to&quot;)</code></li>
-<li>Take from SW Carpentry Episode 2. Setting Up Git</li>
+<li>SW Carpentry Episode 2. Setting Up Git</li>
 </ul>
 </div>
 <div id="section-1.-what-is-version-control" class="section level3">
 <h3>Section 1. What is Version Control?</h3>
 <p>Learning Objective: Understand the value-add of using version control
 to manage software projects<br />
-Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html">Section
+Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/01-what-is-vc.html">Section
 1 Slides</a></p>
 <p>Topics:</p>
 <ul>
 <li>Flow diagram</li>
 </ul>
-<p>Source Materials:</p>
+<p>Course Reference Material:</p>
 <ul>
-<li>Take from SW Carpentry Episode 1. Automated Version Control</li>
+<li>SW Carpentry Episode 1. Automated Version Control</li>
 </ul>
 </div>
 <div id="section-2.-working-local-with-git" class="section level3">
 <h3>Section 2. Working local with git</h3>
 <p>Learning Objective: Use command-line git to track local file changes.
 (<em>more about git</em>)<br />
-Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html">Section
+Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/01-what-is-vc.html.html">Section
 2 Slides</a></p>
 <p>Topics:</p>
 <ul>
@@ -411,23 +411,22 @@ Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intr
 <li>Tracking changes made to a text doc</li>
 <li>What to do when when -m is omitted.</li>
 </ul>
-<p>Source Materials:</p>
+<p>Course Reference Material:</p>
 <ul>
-<li>Take from SW Carpentry Episode 3. Creating a Repository (Local)</li>
-<li>Take from SW Carpentry Episode 4. Tracking Changes</li>
+<li>SW Carpentry Episode 3. Creating a Repository (Local)</li>
+<li>SW Carpentry Episode 4. Tracking Changes</li>
 </ul>
 </div>
 <div id="section-3.-remote-code-hosting-and-github" class="section level3">
 <h3>Section 3. Remote Code Hosting and GitHub</h3>
 <p>Learning Objective: What are remote hosting platforms and why do we
 use them?<br />
-Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html">Section
+Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/01-what-is-vc.html.html">Section
 3 Slides</a></p>
 <p>Topics:</p>
 <ul>
 <li>More on secure authentication/login: username/password/2FA to sign
 in to account, PAT to authenticate</li>
-<li>Take from: <a href="https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/about-authentication-to-github" class="uri">https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/about-authentication-to-github</a></li>
 <li>Git Bash commands: push, pull</li>
 <li>Create a remote repository</li>
 <li>Clone a remote repostitory</li>
@@ -436,17 +435,19 @@ in to account, PAT to authenticate</li>
 GitHub)</li>
 <li>.gitkeep (time permitting)</li>
 </ul>
-<p>Source Materials:</p>
+<p>Course Reference Material:</p>
 <ul>
-<li>Take from SW Carpentry Episode 7. Remotes in GitHub</li>
-<li>Take from SW Carpentry Episode 6. Ignoring Things</li>
+<li>SW Carpentry Episode 7. Remotes in GitHub</li>
+<li>SW Carpentry Episode 6. Ignoring Things</li>
+<li><a href="https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/about-authentication-to-github">Github:
+Keeping your Account and Data Secure</a></li>
 </ul>
 </div>
 <div id="section-4" class="section level3">
 <h3>Section 4</h3>
 <p>Learning Objective: (<em>Something about BC Gov specific materials
 Org, Licensing, bcgovr</em>)<br />
-Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/course-outline.html">Section
+Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/01-what-is-vc.html">Section
 4 Slides</a></p>
 <p>Topics:</p>
 <ul>
@@ -455,9 +456,9 @@ etc.</li>
 <li>history, value-add statements</li>
 <li>bcgov-c, bcgov enterprise</li>
 </ul>
-<p>Source Materials:</p>
+<p>Course Reference Material:</p>
 <ul>
-<li>Take from SW Carpentry Episode 10 - 13</li>
+<li>SW Carpentry Episode 10 - 13</li>
 </ul>
 </div>
 </div>
