--- a/course-outline.html
+++ b/course-outline.html
@@ -399,7 +399,7 @@ Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intr
 <h3>Section 2. Working local with git</h3>
 <p>Learning Objective: Use command-line git to track local file changes.
 (<em>more about git</em>)<br />
-Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/01-what-is-vc.html.html">Section
+Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/01-what-is-vc.html">Section
 2 Slides</a></p>
 <p>Topics:</p>
 <ul>
@@ -421,7 +421,7 @@ Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intr
 <h3>Section 3. Remote Code Hosting and GitHub</h3>
 <p>Learning Objective: What are remote hosting platforms and why do we
 use them?<br />
-Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/01-what-is-vc.html.html">Section
+Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/01-what-is-vc.html">Section
 3 Slides</a></p>
 <p>Topics:</p>
 <ul>
