--- a/course-outline.html
+++ b/course-outline.html
@@ -377,7 +377,10 @@ to GitHub</li>
 <ul>
 <li>Installation instructions here:
 <code>glue::glue(safepaths::get_network_path(), &quot;/8. Data Science Training/github_how_to&quot;)</code></li>
-<li>SW Carpentry Episode 2. Setting Up Git</li>
+<li><a href="https://swcarpentry.github.io/git-novice/">SW Carpentry
+Episode 2. Setting Up Git</a></li>
+<li><a href="https://github.com/bcgov/bcgov-r-geo-workshop/blob/master/20191105_Day_1_PM_Intro/lessons/01-setup.md">bcgov-r-geo-workshop
+Lesson 1</a></li>
 </ul>
 </div>
 <div id="section-1.-what-is-version-control" class="section level3">
@@ -392,7 +395,8 @@ Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intr
 </ul>
 <p>Course Reference Material:</p>
 <ul>
-<li>SW Carpentry Episode 1. Automated Version Control</li>
+<li><a href="https://swcarpentry.github.io/git-novice/01-basics.html">SW
+Carpentry Episode 1. Automated Version Control</a></li>
 </ul>
 </div>
 <div id="section-2.-working-local-with-git" class="section level3">
@@ -413,8 +417,16 @@ Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intr
 </ul>
 <p>Course Reference Material:</p>
 <ul>
-<li>SW Carpentry Episode 3. Creating a Repository (Local)</li>
-<li>SW Carpentry Episode 4. Tracking Changes</li>
+<li><a href="https://swcarpentry.github.io/git-novice/">SW Carpentry
+Episode 3. Creating a Repository (Local)</a></li>
+<li><a href="https://swcarpentry.github.io/git-novice/">SW Carpentry
+Episode 4. Tracking Changes</a></li>
+<li><a href="https://github.com/bcgov/bcgov-r-geo-workshop/blob/master/20191105_Day_1_PM_Intro/lessons/02-create.md">bcgov-r-geo-workshop
+Lesson 2</a></li>
+<li><a href="https://github.com/bcgov/bcgov-r-geo-workshop/blob/master/20191105_Day_1_PM_Intro/lessons/03-changes.md">bcgov-r-geo-workshop
+Lesson 3</a></li>
+<li><a href="https://github.com/bcgov/bcgov-r-geo-workshop/blob/master/20191105_Day_1_PM_Intro/lessons/05-ignore.md">bcgov-r-geo-workshop
+Lesson 5</a></li>
 </ul>
 </div>
 <div id="section-3.-remote-code-hosting-and-github" class="section level3">
@@ -437,8 +449,12 @@ GitHub)</li>
 </ul>
 <p>Course Reference Material:</p>
 <ul>
-<li>SW Carpentry Episode 7. Remotes in GitHub</li>
-<li>SW Carpentry Episode 6. Ignoring Things</li>
+<li><a href="https://swcarpentry.github.io/git-novice/">SW Carpentry
+Episode 7. Remotes in GitHub</a></li>
+<li><a href="https://swcarpentry.github.io/git-novice/">SW Carpentry
+Episode 6. Ignoring Things</a></li>
+<li><a href="https://github.com/bcgov/bcgov-r-geo-workshop/blob/master/20191105_Day_1_PM_Intro/lessons/06-github.md">bcgov-r-geo-workshop
+Lesson 6</a></li>
 <li><a href="https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/about-authentication-to-github">Github:
 Keeping your Account and Data Secure</a></li>
 </ul>
@@ -458,7 +474,8 @@ etc.</li>
 </ul>
 <p>Course Reference Material:</p>
 <ul>
-<li>SW Carpentry Episode 10 - 13</li>
+<li><a href="https://swcarpentry.github.io/git-novice/">SW Carpentry
+Episode 10 - 13</a></li>
 </ul>
 </div>
 </div>
