--- a/course-outline.html
+++ b/course-outline.html
@@ -383,15 +383,18 @@ Episode 2. Setting Up Git</a></li>
 Lesson 1</a></li>
 </ul>
 </div>
-<div id="section-1.-what-is-version-control" class="section level3">
-<h3>Section 1. What is Version Control?</h3>
+<div id="section-1.-introductions-and-what-is-version-control" class="section level3">
+<h3>Section 1. Introductions and What is Version Control?</h3>
 <p>Learning Objective: Understand the value-add of using version control
-to manage software projects<br />
+and the the basics of how automated version control systems work.<br />
 Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/01-what-is-vc/01-what-is-vc.html">Section
 1 Slides</a></p>
 <p>Topics:</p>
 <ul>
-<li>Flow diagram</li>
+<li>How version control systems work</li>
+<li>What is a repository?</li>
+<li>What is the value-add of using version control in teams?
+individually?</li>
 </ul>
 <p>Course Reference Material:</p>
 <ul>
@@ -417,10 +420,10 @@ Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intr
 </ul>
 <p>Course Reference Material:</p>
 <ul>
-<li><a href="https://swcarpentry.github.io/git-novice/">SW Carpentry
-Episode 3. Creating a Repository (Local)</a></li>
-<li><a href="https://swcarpentry.github.io/git-novice/">SW Carpentry
-Episode 4. Tracking Changes</a></li>
+<li><a href="https://swcarpentry.github.io/git-novice/03-create.html">SW
+Carpentry Episode 3. Creating a Repository (Local)</a></li>
+<li><a href="https://swcarpentry.github.io/git-novice/04-changes.html">SW
+Carpentry Episode 4. Tracking Changes</a></li>
 <li><a href="https://github.com/bcgov/bcgov-r-geo-workshop/blob/master/20191105_Day_1_PM_Intro/lessons/02-create.md">bcgov-r-geo-workshop
 Lesson 2</a></li>
 <li><a href="https://github.com/bcgov/bcgov-r-geo-workshop/blob/master/20191105_Day_1_PM_Intro/lessons/03-changes.md">bcgov-r-geo-workshop
@@ -449,10 +452,10 @@ GitHub)</li>
 </ul>
 <p>Course Reference Material:</p>
 <ul>
-<li><a href="https://swcarpentry.github.io/git-novice/">SW Carpentry
-Episode 7. Remotes in GitHub</a></li>
-<li><a href="https://swcarpentry.github.io/git-novice/">SW Carpentry
-Episode 6. Ignoring Things</a></li>
+<li><a href="https://swcarpentry.github.io/git-novice/06-ignore.html">SW
+Carpentry Episode 6. Ignoring Things</a></li>
+<li><a href="https://swcarpentry.github.io/git-novice/07-github.html">SW
+Carpentry Episode 7. Remotes in GitHub</a></li>
 <li><a href="https://github.com/bcgov/bcgov-r-geo-workshop/blob/master/20191105_Day_1_PM_Intro/lessons/06-github.md">bcgov-r-geo-workshop
 Lesson 6</a></li>
 <li><a href="https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/about-authentication-to-github">Github:
@@ -461,21 +464,22 @@ Keeping your Account and Data Secure</a></li>
 </div>
 <div id="section-4" class="section level3">
 <h3>Section 4</h3>
-<p>Learning Objective: (<em>Something about BC Gov specific materials
-Org, Licensing, bcgovr</em>)<br />
+<p>Learning Objective: Understand how the bcgov framework, policy and
+related tools help bc government employees share code on GitHub<br />
 Slides: <a href="https://htmlpreview.github.io/?https://github.com/bcgov/ds-intro-to-git/blob/learning-objectives/slides/04-bcgov-org/04-bcgov-org.html">Section
 4 Slides</a></p>
 <p>Topics:</p>
 <ul>
-<li>discuss bcgov organization, licensing, code-sharing, PIA/STRA
-etc.</li>
-<li>history, value-add statements</li>
+<li>what is the bcgov organization framework</li>
+<li>bcgov policy framework and licensing</li>
+<li>code-sharing and teams</li>
+<li>introduction to bcgovr</li>
 <li>bcgov-c, bcgov enterprise</li>
 </ul>
 <p>Course Reference Material:</p>
 <ul>
-<li><a href="https://swcarpentry.github.io/git-novice/">SW Carpentry
-Episode 10 - 13</a></li>
+<li><a href="https://swcarpentry.github.io/git-novice/10-open.html">SW
+Carpentry Episode 10 - 13</a></li>
 </ul>
 </div>
 </div>
