--- a/pre-workshop/00-software-install.html
+++ b/pre-workshop/00-software-install.html
@@ -371,6 +371,8 @@ top-right of the window.</li>
 <li>Follow the instructions to create an account.</li>
 <li>Verify your email address with GitHub.</li>
 </ol>
+<p>Optional reading: <a href="https://docs.github.com/en/get-started/onboarding/getting-started-with-your-github-account#part-1-configuring-your-github-account">Configuring
+your GitHub account</a></p>
 </div>
 <div id="login-to-your-github-account" class="section level3">
 <h3>2. Login to your GitHub Account</h3>
@@ -380,18 +382,20 @@ set our passwords, and browse repositories. It is possible to edit
 repository content from GitHub although more typically, editing is done
 on our local computers. We will go into more detail on that in the
 course workshop.</p>
-<p>To sign in, go to <a href="https://github.com/" class="uri">https://github.com/</a> and click “Sign In” (top right
-corner). Enter either your username or your email address, and
-password.</p>
+<ol style="list-style-type: decimal">
+<li>Go to <a href="https://github.com/" class="uri">https://github.com/</a> and click “Sign In” (top right
+corner).<br />
+</li>
+<li>Enter either your username or your email address, and password.</li>
+</ol>
+<p>Optional reading:</p>
 </div>
 <div id="configure-multi-factor-authentication-2fa" class="section level3">
 <h3>3. Configure Multi-Factor authentication (2FA)</h3>
 <p>In 2023, GitHub introduced a requirement for all accounts to have
 multi-factor authentication (2FA) configured for extra security. Several
 options exist for setting up 2FA, the simplest is via text message
-described below. The GitHub documentation provides details on the <a href="https://docs.github.com/en/authentication/securing-your-account-with-two-factor-authentication-2fa/configuring-two-factor-authentication">other
-options available to you</a>.</p>
-<p>Configuring 2FA via text messages:</p>
+described below.</p>
 <ol style="list-style-type: decimal">
 <li>In the upper-right corner of any page, click your profile photo,
 then click Settings.</li>
@@ -419,6 +423,8 @@ you lose access.</li>
 recovery codes to enable two-factor authentication for your
 account.</li>
 </ol>
+<p>Optional reading: <a href="https://docs.github.com/en/authentication/securing-your-account-with-two-factor-authentication-2fa/configuring-two-factor-authentication">Other
+2FA configurations</a>.</p>
 </div>
 <div id="authenticate-to-github" class="section level3">
 <h3>3. Authenticate to GitHub</h3>
@@ -448,9 +454,8 @@ to access repositories from the command line, select repo.</li>
 <li><strong>Copy the new token to your clipboard and save to a text file
 for later.</strong></li>
 </ol>
-<p>Further reading: For more information about authenticate with the API
-see <a href="https://docs.github.com/en/rest/overview/authenticating-to-the-rest-api?apiVersion=2022-11-28">Authenticating
-to the REST API.</a></p>
+<p>Optional reading: <a href="https://docs.github.com/en/rest/overview/authenticating-to-the-rest-api?apiVersion=2022-11-28">Authenticating
+to the REST API</a></p>
 </div>
 </div>
 <div id="additional-resources" class="section level2">
