--- a/pre-workshop/00-software-install.html
+++ b/pre-workshop/00-software-install.html
@@ -426,7 +426,7 @@ account.</li>
 2FA configurations</a>.</p>
 </div>
 <div id="authenticate-to-github" class="section level3">
-<h3>3. Authenticate to GitHub</h3>
+<h3>4. Authenticate to GitHub</h3>
 <p>To keep your account secure, you must authenticate before you can
 access certain resources on GitHub. Each way of accessing GitHub
 supports different modes of authentication. When we access resources via
@@ -455,6 +455,33 @@ for later.</strong></li>
 </ol>
 <p>Optional reading: <a href="https://docs.github.com/en/rest/overview/authenticating-to-the-rest-api?apiVersion=2022-11-28">Authenticating
 to the REST API</a></p>
+</div>
+<div id="install-git-and-gitbash" class="section level3 tabset">
+<h3 class="tabset">5. Install Git (and GitBash)</h3>
+<p>Git is a version control system that lets you track who made changes
+to what when. In this workshop, we will be running git commands using a
+program called <em>GitBash</em>. You may already have git and Git Bash
+installed already, please read and following the instructions below.</p>
+<div id="windows" class="section level4">
+<h4>Windows</h4>
+<ol style="list-style-type: decimal">
+<li>Search for “Git Bash” in your start menu to see if Git/GitBash are
+installed on your computer already.<br />
+</li>
+<li>Otherwise navigate to <a href="https://gitforwindows.org">Git for
+Windows</a> and click “Download”.</li>
+<li>When you’ve successfully started the installer, you should see the
+Git Setup wizard screen. Follow the Next and Finish prompts to complete
+the installation. The default options are pretty sensible for most
+users.</li>
+</ol>
+</div>
+<div id="macos" class="section level4">
+<h4>MacOS</h4>
+<p>Please visit: <a href="https://www.atlassian.com/git/tutorials/install-git">Installing
+Git</a> and follow the instructions for installing git for MacOSX.</p>
+<p>If you need more assistance, please reach out to <a href="mailto:stephanie.hazlitt@gov.bc.ca" class="email">stephanie.hazlitt@gov.bc.ca</a> or <a href="mailto:bonnie.robert@gov.bc.ca" class="email">bonnie.robert@gov.bc.ca</a>.</p>
+</div>
 </div>
 </div>
 <div id="additional-resources" class="section level2">
