--- a/pre-workshop/00-software-install.html
+++ b/pre-workshop/00-software-install.html
@@ -458,18 +458,21 @@ to the REST API</a></p>
 </div>
 <div id="install-git-and-gitbash" class="section level3 tabset">
 <h3 class="tabset">5. Install Git (and GitBash)</h3>
-<p>Git is a version control system that lets you track who made changes
-to what when. In this workshop, we will be running git commands using a
-program called <em>GitBash</em>. You may already have git and Git Bash
-installed already, please read and following the instructions below.</p>
+<p>Git is a set of command line utility programs that are designed to
+execute on a <em>Unix style command-line environment</em>. Linux and
+macOS both include built-in Unix command line terminals. Most likely you
+are working on a Windows operating system and will require Git Bash, an
+application for Windows environments which provides an emulation layer
+for a Git command line experience.</p>
 <div id="windows" class="section level4">
 <h4>Windows</h4>
 <ol style="list-style-type: decimal">
 <li>Search for “Git Bash” in your start menu to see if Git/GitBash are
 installed on your computer already.<br />
 </li>
-<li>Otherwise navigate to <a href="https://gitforwindows.org">Git for
-Windows</a> and click “Download”.</li>
+<li>If not, navigate to <a href="https://gitforwindows.org">Git for
+Windows</a> and click “Download” to download Git/GitBash bundled
+software.</li>
 <li>When you’ve successfully started the installer, you should see the
 Git Setup wizard screen. Follow the Next and Finish prompts to complete
 the installation. The default options are pretty sensible for most
@@ -481,6 +484,57 @@ users.</li>
 <p>Please visit: <a href="https://www.atlassian.com/git/tutorials/install-git">Installing
 Git</a> and follow the instructions for installing git for MacOSX.</p>
 <p>If you need more assistance, please reach out to <a href="mailto:stephanie.hazlitt@gov.bc.ca" class="email">stephanie.hazlitt@gov.bc.ca</a> or <a href="mailto:bonnie.robert@gov.bc.ca" class="email">bonnie.robert@gov.bc.ca</a>.</p>
+</div>
+</div>
+<div id="configure-git" class="section level3">
+<h3>6. Configure Git</h3>
+<div id="git-set-up" class="section level4">
+<h4>Git Set Up</h4>
+<p>When we use Git on a new computer for the first time, we need to
+configure a few things. Below are a few examples of configurations we
+will set as we get started with Git:</p>
+<ul>
+<li>our name and email address</li>
+<li>and that we want to use these settings globally (i.e. for every
+project).</li>
+</ul>
+<p>On a command line, Git commands are written as
+<code>git verb options</code>, where <code>verb</code> is what we
+actually want to do and <code>options</code> is additional optional
+information which may be needed for the <code>verb</code>.</p>
+</div>
+<div id="set-user.name-user.email" class="section level4">
+<h4>Set user.name &amp; user.email</h4>
+<p>In our workshop, we will be interacting with <a href="https://github.com/">GitHub</a> and so our configured email
+address should be the same as the one used when setting up your GitHub
+account. Most likely this will be your governement email.</p>
+<p>Below is an example configuration, please type in the commands using
+your name and email address.</p>
+<pre><code>$ git config --global user.name &quot;Bonnie Robert&quot;
+$ git config --global user.email &quot;bonnie.robert@gov.bc.ca&quot;</code></pre>
+<p>If you are concerned about privacy, please review <a href="https://help.github.com/articles/keeping-your-email-address-private/">GitHub’s
+instructions for keeping your email address private</a>.</p>
+</div>
+<div id="global-settings" class="section level4">
+<h4>Global Settings</h4>
+<p>The two commands we just ran above only need to be run once: the flag
+<code>--global</code> tells Git to use the settings for every project,
+in your user account, on this computer.</p>
+<p>You can check your settings at any time:</p>
+<pre><code>$ git config --list</code></pre>
+<p>You can change your configuration as many times as you want: use the
+same commands to update your name or email address.</p>
+</div>
+<div id="git-help-and-manual" class="section level4">
+<h4>Git Help and Manual</h4>
+<p>Always remember that if you forget a <code>git</code> command, you
+can access the list of commands by using <code>-h</code> and access the
+Git manual by using <code>--help</code> :</p>
+<pre><code>$ git config -h
+$ git config --help</code></pre>
+<p>While viewing the manual, remember the <code>:</code> is a prompt
+waiting for commands and you can press <kbd>Q</kbd> to exit the
+manual.</p>
 </div>
 </div>
 </div>
